adding browser bar color

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#f0f0f0" />
+
     <link rel="stylesheet" href="index.css">
-    <link rel="shortcut icon" href="https://res.cloudinary.com/dt2xm7jiq/image/upload/v1755237583/samples/ecommerce/shoes.png" type="image/x-icon">
+    <link rel="shortcut icon"
+        href="https://res.cloudinary.com/dt2xm7jiq/image/upload/v1755237583/samples/ecommerce/shoes.png"
+        type="image/x-icon">
     <script defer src="index.js"></script>
     <title>E-commerce</title>
 </head>
+
 <body>
     <section class=" top-txt ">
         <div class="head container ">
@@ -48,7 +54,8 @@
                 <p class="collectio ">SUMMER COLLECTION</p>
                 <h2>FALL - WINTER<br>Collection 2023</h2>
                 <div class="home_label ">
-                    <p>A specialist label creating luxury essentials. Ethically crafted<br>with an unwavering commitment to exceptional quality.</p>
+                    <p>A specialist label creating luxury essentials. Ethically crafted<br>with an unwavering commitment
+                        to exceptional quality.</p>
                 </div>
                 <button><a href="#sellers">SHOP NOW</a><i class='bx bx-right-arrow-alt'></i></button>
                 <div class="home_social_icons">
@@ -112,7 +119,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                         <!-- <div class="add-cart">
                             <button>Add To Cart</button>
@@ -141,7 +148,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -167,7 +174,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -193,7 +200,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -224,7 +231,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -250,7 +257,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -276,7 +283,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -302,7 +309,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -333,7 +340,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -359,7 +366,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -385,7 +392,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -411,7 +418,7 @@
                             </div>
                         </div>
                         <div class="buy-now">
-                            <button><a href="#">Buy  Now</a></button>
+                            <button><a href="#">Buy Now</a></button>
                         </div>
                     </div>
                 </div>
@@ -465,31 +472,33 @@
     <section id="contact">
         <div class="contact container">
             <!-- //Sight venum na map vachupom -->
-        <div class="map">
-            <iframe src="#"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-        <form action="https://formspree.io/f/xzzbvpql" method="POST">
-            <div class="form">
-                <div class="form-txt">
-                    <h4>INFORMATION</h4>
-                    <h1>Contact Us</h1>
-                    <span>As you might expect of a company that began as a high-end interiors contractor, we pay strict
-                        attention.</span>
-                    <h3>USA</h3>
-                    <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
-                    <h3>India</h3>
-                    <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
-                </div>
-                <div class="form-details">
-                    <input type="text" name="name" id="name" placeholder="Name" required>
-                    <input type="email" name="email" id="email" placeholder="Email" required>
-                    <textarea name="message" id="message" cols="52" rows="7" placeholder="Message" required></textarea>
-                    <button>SEND MESSAGE</button>
-                </div>
+            <div class="map">
+                <iframe src="#" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-        </form>
-    </div>
+            <form action="https://formspree.io/f/xzzbvpql" method="POST">
+                <div class="form">
+                    <div class="form-txt">
+                        <h4>INFORMATION</h4>
+                        <h1>Contact Us</h1>
+                        <span>As you might expect of a company that began as a high-end interiors contractor, we pay
+                            strict
+                            attention.</span>
+                        <h3>USA</h3>
+                        <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
+                        <h3>India</h3>
+                        <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
+                    </div>
+                    <div class="form-details">
+                        <input type="text" name="name" id="name" placeholder="Name" required>
+                        <input type="email" name="email" id="email" placeholder="Email" required>
+                        <textarea name="message" id="message" cols="52" rows="7" placeholder="Message"
+                            required></textarea>
+                        <button>SEND MESSAGE</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </section>
     <footer>
         <div class="footer-container container">
@@ -529,4 +538,5 @@
         </div>
     </footer>
 </body>
+
 </html>
