adding CANTACT US

--- a/index.html
+++ b/index.html
@@ -485,9 +485,9 @@
                             strict
                             attention.</span>
                         <h3>USA</h3>
-                        <p>195 E Parker Square Dr, Parker, CO 801<br>+43 982-314-0958</p>
+                        <p>195 E Parker Square Dr, Parker, CO 801<br>+91 6382946955</p>
                         <h3>India</h3>
-                        <p>HW95+C9C, Lorem ipsum dolor sit.<br>411014</p>
+                        <p>HW95 + C9C, Lorem ipsum dolor sit.<br>411014</p>
                     </div>
                     <div class="form-details">
                         <input type="text" name="name" id="name" placeholder="Name" required>
